--- a/main.yaml
+++ b/main.yaml
@@ -1,9 +1,9 @@
 environment:
   foo: bar
   env-var-2: some-var
-parameters:
-  - name: var
-    type: string
+# parameters:
+#   - name: var
+#     type: string
 triggers:
   cron: '*****'
 stages:
